--- a/README.html
+++ b/README.html
@@ -1,10 +1,12 @@
 <h1>My title</h1>
 <ul>
-<li>Hello</li>
+<li>He<b>l</b>lo</li>
 <li>Bye</li>
 </ul>
 
 Hello
 
-I'm a text
-with 2 lines
+I'm <b>a</b> text
+with <em>2 lines</em>
+
+<b>Or in bold</b>
