--- a/README.html
+++ b/README.html
@@ -1,12 +1,8 @@
 <h1>My title</h1>
 <ul>
 <li>He<b>l</b>lo</li>
-<li>Bye</li>
-</ul>
+<li>Bye</li><p></ul></p>
+<p>Hello</p>
 
-Hello
-
-I'm <b>a</b> text
-with <em>2 lines</em>
-
-<b>Or in bold</b>
+I'm <b>a</b> text<p>with <em>2 lines</em></p>
+<p><b>Or in bold</b></p>
